--- a/src/App.css
+++ b/src/App.css
@@ -43,5 +43,11 @@
 .content-container {
   width: calc(100vw - 20rem);
   margin: 0 auto;
-  border: 2px solid red;
+}
+
+@media screen and (max-width: 1000px) {
+  .content-container {
+    width: calc(100vw - 10rem);
+    margin: 0 auto;
+  }
 }
