--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,3 +3,10 @@
   bottom: 0;
   width: 100%;
 }
+
+@media screen and (max-width: 660px) {
+  .footer-content-container {
+    display: flex;
+    flex-direction: column;
+  }
+}
