--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,8 @@
-.footer {
-  position: fixed;
+/* .footer {
+  position: sticky;
   bottom: 0;
   width: 100%;
-}
+} */
 
 @media screen and (max-width: 660px) {
   .footer-content-container {
