--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   --aqua-light: #1ed6ca;
   --grey-dark: #757f83;
   --grey-light: #8198a0;
+  --grey-light-bg: #ccdadf;
   --orange-light: #eeac56;
   --white: #e9e7d8;
 }
@@ -59,6 +60,11 @@
 .italic {
   font-style: italic;
 }
+
+.grey-border-bottom {
+  border-bottom: 3px solid var(--grey-light-bg);
+}
+
 @media screen and (max-width: 1000px) {
   .content-container {
     width: calc(100vw - 10rem);
