--- a/src/components/HorizontalCard/HorizontalCard.css
+++ b/src/components/HorizontalCard/HorizontalCard.css
@@ -1,6 +1,6 @@
 .col-3 {
   display: grid;
-  grid-template-columns: 2fr 3fr 2fr;
+  grid-template-columns: 2fr 2.5fr 1.5fr;
   grid-column-gap: 10px;
 }
 
@@ -10,4 +10,10 @@
 
 .card.hori-card {
   border: 1px solid transparent;
+}
+
+@media screen and (max-width: 1338px) {
+  .card-head-hor {
+    font-size: 1.75rem;
+  }
 }
