--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,10 @@
   color: var(--aqua-dark);
 }
 
+.aqua-dark-bg {
+  background-color: var(--aqua-dark);
+}
+
 .grey-light-bg {
   background-color: var(--grey-light);
 }
