--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,9 @@
 .black-bg {
   background-color: var(--black-bg);
 }
+.black-dark-bg {
+  background-color: rgb(36, 29, 29);
+}
 .black-text {
   color: var(--black-bg);
 }
