--- a/src/components/VerticalCard/VerticalCard.css
+++ b/src/components/VerticalCard/VerticalCard.css
@@ -7,3 +7,9 @@
 .grey-border {
   border: 1px solid var(--grey-light-bg);
 }
+
+@media screen and (max-width: 1290px) {
+  .vert-card-container {
+    justify-content: center;
+  }
+}
